Fix minor alignment issue

--- a/garhdony_app/static/garhdony_app/pronoun_editor_notebook_style.css
+++ b/garhdony_app/static/garhdony_app/pronoun_editor_notebook_style.css
@@ -85,6 +85,7 @@
 
 .jquery-notebook.bubble ul li {
     display: inline;
+    vertical-align: top;
 }
 
 .jquery-notebook.bubble button {
